# Video_editing_agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: audio_intelligence.py  clip_trimmer.py  content_analyzer.py  crew.py  executor.py  flow.py  narrative_structurer.py  orchestrator.py  platform_adapter.py  scene_detection_agent.py  script_writer.py
api/: main.py
config/: logging_config.py  prompts.py  settings.py
core/: edit_plan.py  exceptions.py  ffmpeg_builder.py  frame_extractor.py  scene_detector.py
frontend/: index.html  package.json
frontend/src/: api.ts  index.css
frontend/src/components/: EditPanel.tsx  VideoUpload.tsx
models/: __init__.py  enums.py  schemas.py
scripts/: demo.py
services/: vision_service.py
tests/: conftest.py
tests/test_core/: test_edit_plan.py  test_ffmpeg_builder.py
tests/test_services/: test_vision_service.py
tools/: audio_tools.py  ffmpeg_tools.py  frame_extraction.py  platform_tools.py  scene_detection.py  vision_analysis.py
ui/: app.py
ui/components/: edit_interface.py  progress_tracker.py  scene_timeline.py  video_preview.py  video_upload.py
